# angband

./: .gitignore  .readthedocs.yaml  .svnignore  .travis.yml  AUTHORS  Angband with Visual Studio 2019.docx  Angband.sln  Angband.vcxproj  Angband.vcxproj.filters  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  I-README  Makefile  Makefile.am  Makefile.in  Markdown.pm  READ.ME  README  README.PC  README.md  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  build.pl  changes.txt  compile.txt  compiling.txt  configure  configure.ac  configure.in  copying.txt  deploy.yml  djgpp.txt  faq.txt  flake.nix  (+14 more)
lib/apex/: Makefile  Makefile.am  Makefile.in
lib/bone/: Icon_  Makefile  Makefile.am  Makefile.in
lib/data/: Icon_  Makefile  Makefile.am  Makefile.in
lib/edit/: Makefile  Makefile.am  Makefile.in  a_info.txt  activation.txt  artifact.txt  b_info.txt  body.txt  class.txt  constants.txt  cost_adj.txt  dungeon_profile.txt  e_info.txt  effect.txt  ego_item.txt  ego_themes.txt  f_info.txt  flavor.txt  g_info.txt  h_info.txt  hints.txt  history.txt  k_info.txt  limits.txt  monster.txt  monster_base.txt  monster_spell.txt  names.txt  object.txt  object_base.txt  p_class.txt  p_hist.txt  p_info.txt  p_race.txt  pain.txt  pit.txt  r_info.txt  room_template.txt  shop_own.txt  spell.txt  (+6 more)
lib/help/: 308.txt  320.txt  330.txt  340.txt  Icon_  Makefile  Makefile.am  Makefile.in  angband.css  attack.txt  battle.hlp  birth.hlp  birth.txt  cmds_g.hlp  cmds_o.hlp  cmds_r.hlp  cmds_w.hlp  command.txt  commands.hlp  commands.txt  copying.txt  customize.txt  debug.txt  docutils-website.conf  dungeon.hlp  dungeon.txt  general.hlp  general.txt  guide.txt  help.hlp  index.txt  metadoc.txt  modifying.txt  option.txt  playing.txt  r_comm.txt  r_index.txt  readme.txt  symbols.txt  thanks.txt  (+2 more)
lib/pref/: Makefile  Makefile.am  Makefile.in  flvr-dvg.prf  flvr-new.prf  flvr-nmd.prf  flvr-shb.prf  flvr-xxx.prf  font-ami.prf  font-dos.prf  font-gcu.prf  font-gtk.prf  font-ibm.prf  font-mac.prf  font-sdl.prf  font-win.prf  font-x11.prf  font-xxx.prf  font.prf  graf-dvg.prf  graf-gcu.prf  graf-gtk.prf  graf-ibm.prf  graf-lsl.prf  graf-mac.prf  graf-new.prf  graf-nmd.prf  graf-sdl.prf  graf-shb.prf  graf-win.prf  graf-x11.prf  graf-xxx.prf  graf.prf  keys-gcu.prf  message.prf  pref-acn.prf  pref-ami.prf  pref-dos.prf  pref-gcu.prf  pref-gfw.prf  (+14 more)
lib/script/: Makefile.am  Makefile.in  birth.lua  event.lua  init.lua  object.lua  player.lua  spell.lua  store.lua  test.lua  trace.lua
src/: .depend  .gdbinit  .gitignore  .splintrc  A-mac-h.c  A-mac-h.pch  A-win-h.pch  AppDelegate.h  CHANGES  CONTENTS  FIXES  HEADER  I-Info.win  I-README  I-README.old  I-info-270  I-info.emx  Makefile  Makefile.3ds  Makefile.acn  Makefile.am  Makefile.ami  Makefile.bcc  Makefile.blocksds  Makefile.blocksds.arm7  Makefile.blocksds.arm9  Makefile.cocoa  Makefile.con  Makefile.crb  Makefile.cur  Makefile.cyg  Makefile.dos  Makefile.emx  Makefile.gtk  Makefile.ibm  Makefile.in  Makefile.inc  Makefile.lcc  Makefile.lsl  Makefile.mpw  (+669 more)
src/borg/: borg-attack-munchkin.c  borg-attack-munchkin.h  borg-caution.c  borg-caution.h  borg-cave-light.c  borg-cave-light.h  borg-cave-util.c  borg-cave-util.h  borg-cave-view.c  borg-cave-view.h  borg-cave.c  borg-cave.h  borg-commands.c  borg-danger.c  borg-danger.h  borg-escape.c  borg-escape.h  borg-fight-attack.c  borg-fight-attack.h  borg-fight-defend.c  borg-fight-defend.h  borg-fight-perm.c  borg-fight-perm.h  borg-flow-dark.c  borg-flow-dark.h  borg-flow-glyph.c  borg-flow-glyph.h  borg-flow-kill.c  borg-flow-kill.h  borg-flow-misc.c  borg-flow-misc.h  borg-flow-stairs.c  borg-flow-stairs.h  borg-flow-take.c  borg-flow-take.h  borg-flow.c  borg-flow.h  borg-formulas-calc.c  borg-formulas-calc.h  borg-formulas.c  (+97 more)
src/cocoa/: Angband-Cocoa.xml  Angband_Icons.icns  AppDelegate.h  AppDelegate.m  CommandMenu.plist  Data.icns  Edit.icns  Makefile  TileSetScaling.h  TileSetScaling.m  snd-cocoa.h  snd-cocoa.m
src/doc/: TheCavemanGuideToAngbandProgramming.rst  command.txt  doxygen-mainpage.md  doxygen.conf  event.txt  howto-generation-stats.rst  monster-ai.md  new-egos.rst  release-checklist.rst  restruct.txt  savefile-how-to.rst  security.txt  stylesheet.css  utf8-notes.rst
src/gtk/: Makefile  cairo-utils.c  cairo-utils.h  main-gtk.c  main-gtk.h
src/help/: index
src/lua/: Makefile.am  Makefile.in  array.lua  basic.lua  class.lua  clean.lua  code.lua  container.lua  declaration.lua  define.lua  doit.lua  enumerate.lua  feature.lua  function.lua  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  liolib.c  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.c  (+53 more)
src/monster/: Makefile  constants.h  init.c  init.h  list-blow-effects.h  list-blow-methods.h  list-mon-flags.h  list-mon-spells.h  list-spell-effects.h  melee1.c  melee2.c  mon-blow-effects.c  mon-blow-effects.h  mon-blow-methods.c  mon-init.c  mon-init.h  mon-list.c  mon-list.h  mon-lore.c  mon-lore.h  mon-make.c  mon-make.h  mon-msg.c  mon-msg.h  mon-power.c  mon-power.h  mon-spell.c  mon-spell.h  mon-timed.c  mon-timed.h  mon-util.c  mon-util.h  monster.h  monster1.c  monster2.c  monster2.c.rej  rval.h  types.h
src/nds/: Makefile.arm7  Makefile.arm9  arm7_main.c  dlmalloc-config.h  dlmalloc.c  dlmalloc.h  ds_btn.h  ds_errfont.h  ds_font_3x8.h  ds_font_5x8.h  ds_gfx.h  ds_io.h  ds_ipc.h  ds_kbd.h  ds_main.h  ds_win.h  icon.smdh  nds-buttons-3ds.c  nds-buttons.c  nds-buttons.h  nds-draw.c  nds-draw.h  nds-event.c  nds-event.h  nds-font-3x8.c  nds-font-3x8.h  nds-font-5x8.c  nds-font-5x8.h  nds-keyboard-3ds.c  nds-keyboard.c  nds-keyboard.h  nds-screenkeys.c  nds-screenkeys.h  nds-slot2-ram.c  nds-slot2-ram.h  nds-slot2-virt.c  nds-slot2-virt.h
src/object/: artifact.c  artifact.h  chest.c  constants.h  identify.c  inventory.h  list-flag-types.h  list-object-flags.h  list-slays.h  obj-desc.c  obj-flag.c  obj-flag.h  obj-info.c  obj-list.c  obj-list.h  obj-make.c  obj-power.c  obj-tval.c  obj-ui.c  (+10 more)
(+1520 files in other folders)
